# cpu-emulator

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
helper/: build.sh
src/: CHIP8.cpp  CHIP8.h  main.cpp
